--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,73 +1,89 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
-  build:
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
+  tests:
+    name: Tests in ${{ matrix.python-version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    needs: code_style
+    strategy:
+      fail-fast: false
+      matrix:
+        ghidra-release-url: ["https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.3.2_build/ghidra_10.3.2_PUBLIC_20230711.zip", "https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_11.0_build/ghidra_11.0_PUBLIC_20231222.zip"]
+        jep-jar-release-url: ["https://github.com/ninia/jep/releases/download/v4.2.0/jep-4.2.0.jar"]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.8", "3.12"]
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Ghidrathon
+      uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-
-    - name: Set up JDK 17
+    - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
+        distribution: "temurin"
+        java-version: "17"
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
-    - name: Build with Gradle Wrapper
-      run: gradle -PGHIDRA_INSTALL_DIR=/opt/ghidra/
-
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
-
-  dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
+      uses: gradle/actions/setup-gradle@v3
       with:
-        submodules: 'recursive'
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+        gradle-version: "7.3"
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        python-version: ${{ matrix.python-version }}
+    - name: Configure temp folder
+      run: mkdir ../tmp
+    - name: Install Python requirements
+      run: |
+        pip install -r requirements.txt
+        pip install -r Ghidrathon/util/requirements.txt
+        pip install -r Ghidrathon/data/python/tests/requirements.txt
+        python -c "import importlib.util;import pathlib;print(pathlib.Path(importlib.util.find_spec('jep').origin).parent)"
+    - name: Download dependencies Linux/macOS
+      if : ${{ matrix.os != 'windows-latest' }}
+      run: |
+        wget ${{ matrix.ghidra-release-url }} -O ../tmp/ghidra.zip
+        unzip ../tmp/ghidra.zip -d ../tmp/ghidra
+        mv ../tmp/ghidra/$(ls ../tmp/ghidra) ../tmp/ghidra/ghidra_PUBLIC
+        wget ${{ matrix.jep-jar-release-url }} -O ./lib/jep-4.2.0.jar
+    - name: Download dependencies Windows
+      if : ${{ matrix.os == 'windows-latest' }}
+      shell: pwsh
+      run: |
+        Invoke-WebRequest -URI "${{ matrix.ghidra-release-url }}" -OutFile "../tmp/ghidra.zip"
+        mkdir ../tmp/ghidra
+        tar -xf ../tmp/ghidra.zip -C ../tmp/ghidra
+        Rename-Item -Path "../tmp/ghidra/$((Get-ChildItem -Path "../tmp/ghidra").Name)" -NewName "ghidra_PUBLIC"
+        Invoke-WebRequest -URI "${{ matrix.jep-jar-release-url }}" -OutFile "./lib/jep-4.2.0.jar"
+    - name: Build Ghidrathon
+      run: gradle -PGHIDRA_INSTALL_DIR=${{ github.workspace }}/../tmp/ghidra/ghidra_PUBLIC
+    - name: Install Ghidrathon Linux/macOS
+      if : ${{ matrix.os != 'windows-latest' }}
+      run: |
+        unzip ./dist/$(ls ./dist) -d ../tmp/ghidra/ghidra_PUBLIC/Ghidra/Extensions/
+    - name: Install Ghidrathon Windows
+      if : ${{ matrix.os == 'windows-latest' }}
+      shell: pwsh
+      run: |
+        Rename-Item -Path "./dist/$((Get-ChildItem -Path "./dist").Name)" -NewName "Ghidrathon.zip"
+        tar -xf ./dist/Ghidrathon.zip -C ../tmp/ghidra/ghidra_PUBLIC/Ghidra/Extensions/
+    - name: Set Ghidrathon Python interpreter
+      run: python util/ghidrathon_configure.py ../tmp/ghidra/ghidra_PUBLIC -d
+    - name: Run tests
+      run: |
+        ../tmp/ghidra/ghidra_PUBLIC/support/analyzeHeadless ${{ github.workspace }}/../tmp/ghidra test -Import ${{ github.workspace }}/../tmp/ghidra/ghidra_PUBLIC/GPL/DemanglerGnu/os/linux_x86_64/demangler_gnu_v2_24 -PostScript ${{ github.workspace }}/data/python/tests/hello.py -PostScript ${{ github.workspace }}/data/python/tests/runall.py > ../tmp/log.txt
+    - name: Check tests
+      run: |
+        python -c "import pathlib, sys;log_text=pathlib.Path('../tmp/log.txt').read_text(encoding='utf-8');print(log_text);sys.exit(0 if 'runall.py called exit with code 0' in log_text else -1)"
+        python -c "import pathlib, sys; sys.exit(0 if pathlib.Path('hello.txt').exists() else -1)"
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        path: ./dist/
